Update grpc to 1.10.0 and add twine and bumpversion to dev

--- a/Pipfile
+++ b/Pipfile
@@ -1,18 +1,22 @@
 [[source]]
+
 url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
 
+
 [packages]
 
-grpcio = "*"
-"grpcio-tools" = "==1.4.0"
+grpcio = "==1.10.0"
+grpcio-tools = "==1.10.0"
 
 
 [dev-packages]
-neovim = "*"
 
+bumpversion = "*"
+twine = "*"
 
 
 [requires]
+
 python_version = "3.6"
